[gd_scene load_steps=13 format=3 uid="uid://cf0ya1o4m6ooe"]

[ext_resource type="Script" path="res://scripts/kitchen_panel/guidebook_menu.gd" id="1_cyubo"]
[ext_resource type="Texture2D" uid="uid://cholgudtx35vj" path="res://assets/images/kitchen panel/ingredients/coffeebean.PNG" id="2_ch34b"]
[ext_resource type="Texture2D" uid="uid://cnqmvs0eh5wkf" path="res://assets/images/kitchen panel/misc/bookinside_base.PNG" id="2_mm3me"]
[ext_resource type="Texture2D" uid="uid://cavqg8ft3a5g7" path="res://assets/images/kitchen panel/misc/leftpage.PNG" id="3_2txu0"]
[ext_resource type="Texture2D" uid="uid://lgfavxd1s0nj" path="res://assets/images/kitchen panel/misc/rightpage.PNG" id="4_xb1cd"]
[ext_resource type="FontFile" uid="uid://cefw83v7a4qbq" path="res://assets/fonts/PixelOperator8.ttf" id="6_1ibgr"]
[ext_resource type="Texture2D" uid="uid://b6nab1daylfuw" path="res://assets/images/kitchen panel/ingredients/bnb_water_drop_a.png" id="7_07k52"]
[ext_resource type="Texture2D" uid="uid://1iroxuglugmu" path="res://assets/images/buttons/bnb_play.PNG" id="9_gqnwh"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_h27ga"]
bg_color = Color(0.203922, 0.203922, 0.203922, 0.654902)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_468d8"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_uxr8j"]
bg_color = Color(0.721569, 0.588235, 0.403922, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_aso8s"]
bg_color = Color(0.721569, 0.588235, 0.403922, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="guidebook_menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -320.0
offset_bottom = -180.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_cyubo")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 320.0
offset_bottom = 180.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_h27ga")

[node name="TextureRect" type="TextureRect" parent="."]
texture_filter = 1
layout_mode = 0
offset_left = 55.0
offset_top = 34.0
offset_right = 265.0
offset_bottom = 145.0
texture = ExtResource("2_mm3me")

[node name="RightButton" type="TextureButton" parent="."]
texture_filter = 1
layout_mode = 0
offset_left = 238.0
offset_top = 126.0
offset_right = 255.0
offset_bottom = 143.0
texture_normal = ExtResource("3_2txu0")
stretch_mode = 0

[node name="LeftButton" type="TextureButton" parent="."]
texture_filter = 1
layout_mode = 0
offset_left = 62.0
offset_top = 126.0
offset_right = 79.0
offset_bottom = 143.0
texture_normal = ExtResource("4_xb1cd")
stretch_mode = 0

[node name="Pages" type="Control" parent="."]
anchors_preset = 0
offset_left = 55.0
offset_top = 34.0
offset_right = 265.0
offset_bottom = 145.0

[node name="Page1" type="Control" parent="Pages"]
layout_mode = 3
anchors_preset = 0
offset_right = 210.0
offset_bottom = 111.0

[node name="Americano" type="Panel" parent="Pages/Page1"]
texture_filter = 1
layout_mode = 0
offset_left = 10.0
offset_top = 9.0
offset_right = 95.0
offset_bottom = 41.0
theme_override_styles/panel = SubResource("StyleBoxFlat_468d8")

[node name="Panel" type="Panel" parent="Pages/Page1/Americano"]
layout_mode = 0
offset_left = 3.0
offset_top = -4.0
offset_right = 83.0
offset_bottom = 11.0
theme_override_styles/panel = SubResource("StyleBoxFlat_uxr8j")

[node name="RichTextLabel" type="RichTextLabel" parent="Pages/Page1/Americano/Panel"]
layout_mode = 0
offset_top = 3.0
offset_right = 80.0
offset_bottom = 11.0
theme_override_fonts/normal_font = ExtResource("6_1ibgr")
theme_override_font_sizes/normal_font_size = 8
bbcode_enabled = true
text = "[center]Americano"

[node name="Panel2" type="Panel" parent="Pages/Page1/Americano"]
layout_mode = 0
offset_left = 3.0
offset_top = 13.0
offset_right = 83.0
offset_bottom = 47.0
theme_override_styles/panel = SubResource("StyleBoxFlat_aso8s")

[node name="TextureRect" type="TextureRect" parent="Pages/Page1/Americano/Panel2"]
layout_mode = 0
offset_left = 8.0
offset_top = 4.0
offset_right = 32.0
offset_bottom = 28.0
texture = ExtResource("2_ch34b")

[node name="TextureRect2" type="TextureRect" parent="Pages/Page1/Americano/Panel2"]
layout_mode = 0
offset_left = 48.0
offset_top = 4.0
offset_right = 72.0
offset_bottom = 28.0
texture = ExtResource("7_07k52")

[node name="Espresso" type="Panel" parent="Pages/Page1"]
texture_filter = 1
offset_left = 113.0
offset_top = 9.0
offset_right = 198.0
offset_bottom = 41.0
theme_override_styles/panel = SubResource("StyleBoxFlat_468d8")

[node name="Panel" type="Panel" parent="Pages/Page1/Espresso"]
layout_mode = 0
offset_left = 3.0
offset_top = -4.0
offset_right = 83.0
offset_bottom = 11.0
theme_override_styles/panel = SubResource("StyleBoxFlat_uxr8j")

[node name="RichTextLabel" type="RichTextLabel" parent="Pages/Page1/Espresso/Panel"]
layout_mode = 0
offset_top = 3.0
offset_right = 80.0
offset_bottom = 11.0
theme_override_fonts/normal_font = ExtResource("6_1ibgr")
theme_override_font_sizes/normal_font_size = 8
bbcode_enabled = true
text = "[center]Espresso"

[node name="Panel2" type="Panel" parent="Pages/Page1/Espresso"]
layout_mode = 0
offset_left = 3.0
offset_top = 13.0
offset_right = 83.0
offset_bottom = 47.0
theme_override_styles/panel = SubResource("StyleBoxFlat_aso8s")

[node name="TextureRect" type="TextureRect" parent="Pages/Page1/Espresso/Panel2"]
layout_mode = 0
offset_left = 28.0
offset_top = 4.0
offset_right = 52.0
offset_bottom = 28.0
texture = ExtResource("2_ch34b")

[node name="Page2" type="Control" parent="Pages"]
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Page3" type="Control" parent="Pages"]
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="TextureButton" type="TextureButton" parent="."]
texture_filter = 1
layout_mode = 0
offset_left = 277.0
offset_top = 147.0
offset_right = 301.0
offset_bottom = 171.0
texture_normal = ExtResource("9_gqnwh")
stretch_mode = 0

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
unique_name_in_owner = true
volume_db = 24.0

[connection signal="pressed" from="RightButton" to="." method="get_next_right_page"]
[connection signal="pressed" from="LeftButton" to="." method="get_next_left_page"]
[connection signal="pressed" from="TextureButton" to="." method="_on_button_pressed"]
